--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@ body {
     width: 100%;
     height: 100%;
     margin: 0px;
+    background-color: rgb(0, 48, 85);
+}
+#responsive-wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    aspect-ratio: 1000 / 1200;
+}
+#responsive-wrapper > gwd-genericad {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1000px;
+    height: 1200px;
+    transform-origin: top left;
 }
 .gwd-page-container {
     position: relative;
@@ -53,7 +69,7 @@ body {
     -moz-transform-style: preserve-3d;
 }
 .gwd-page-wrapper {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 48, 85);
     position: absolute;
     transform: translateZ(0px);
     -webkit-transform: translateZ(0px);
@@ -976,6 +992,9 @@ body {
 <body>
   
   <script gwd-served-sizes="" type="application/json">["1000x1200"]</script>
+ 
+ 
+   <div id="responsive-wrapper">
   <gwd-genericad id="gwd-ad">
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
       <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-1wqj gwd-page-vcah" data-gwd-width="100%" data-gwd-height="100%" data-gwd-name="Intro">
@@ -1014,7 +1033,42 @@ body {
         </div>
       </gwd-page>
     </gwd-pagedeck>
-  </gwd-genericad>
+  </div>
+
+</gwd-genericad>
+  <script>
+    (function() {
+      var DESIGN_WIDTH = 1000;
+      var DESIGN_HEIGHT = 1200;
+      var wrapper = document.getElementById('responsive-wrapper');
+      var ad = document.getElementById('gwd-ad');
+
+      function scaleAd() {
+        if (!wrapper || !ad) {
+          return;
+        }
+        var wrapperWidth = wrapper.clientWidth;
+        if (!wrapperWidth) {
+          return;
+        }
+        var wrapperHeight = wrapper.clientHeight;
+        if (!wrapperHeight) {
+          wrapperHeight = wrapperWidth * (DESIGN_HEIGHT / DESIGN_WIDTH);
+        }
+        var scale = Math.min(wrapperWidth / DESIGN_WIDTH, wrapperHeight / DESIGN_HEIGHT);
+        ad.style.transform = 'scale(' + scale + ')';
+        var scaledWidth = DESIGN_WIDTH * scale;
+        var scaledHeight = DESIGN_HEIGHT * scale;
+        ad.style.left = ((wrapperWidth - scaledWidth) / 2) + 'px';
+        ad.style.top = ((wrapperHeight - scaledHeight) / 2) + 'px';
+      }
+
+      window.addEventListener('resize', scaleAd);
+      window.addEventListener('DOMContentLoaded', scaleAd);
+      window.addEventListener('load', scaleAd);
+      scaleAd();
+    })();
+  </script>
   <script type="text/javascript" id="gwd-init-code">
     (function() {
       var gwdAd = document.getElementById('gwd-ad');
