--- a/index.html
+++ b/index.html
@@ -927,6 +927,7 @@ body {
     font-family: Arial, sans-serif;
     font-size: 16px;
     font-weight: 700;
+    text-decoration: none;
     letter-spacing: 0.3px;
     cursor: pointer;
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
