--- a/index.html
+++ b/index.html
@@ -949,23 +949,25 @@ body {
 /* Bottom CTA buttons */
 #cta-buttons {
     position: fixed;
-    bottom: 16px;
-    left: 16px;
-    right: 16px;
+    bottom: calc(env(safe-area-inset-bottom, 16px) + 10px);
+    left: 0;
+    right: 0;
+    padding: 0 16px;
     z-index: 9999;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    align-items: stretch;
+    align-items: center;
 }
 .cta-btn {
     display: block;
     padding: 14px 22px;
     width: 100%;
-    max-width: 420px;
+    max-width: 520px;
     margin: 0 auto;
     text-align: center;
     border: none;
+    box-sizing: border-box;
     font-family: Arial, sans-serif;
     font-size: 16px;
     font-weight: 700;
@@ -986,6 +988,18 @@ body {
 }
 .cta-btn:active {
     transform: scale(0.98);
+}
+@media (max-width: 600px) {
+    #cta-buttons {
+        padding: 0 12px;
+        gap: 8px;
+        bottom: calc(env(safe-area-inset-bottom, 12px) + 8px);
+    }
+    .cta-btn {
+        max-width: 100%;
+        font-size: 15px;
+        padding: 12px 14px;
+    }
 }
 .gwd-div-1n26 {
     width: 100%;
@@ -1206,7 +1220,10 @@ body {
       }
 
       var COLORS = ['#ffd700', '#ffb400', '#f7d96f', '#ffef9f', '#ffcd38'];
-      var CONFETTI_COUNT = 180;
+      var isMobile = window.matchMedia('(max-width: 600px)').matches;
+      var CONFETTI_COUNT = 60;
+      var WIDTH_RANGE = isMobile ? [4, 7] : [6, 10];
+      var HEIGHT_RANGE = isMobile ? [8, 12] : [12, 18];
 
       function randomBetween(min, max) {
         return Math.random() * (max - min) + min;
@@ -1217,14 +1234,15 @@ body {
           var piece = document.createElement('span');
           piece.className = 'confetti';
 
-          var width = randomBetween(6, 10);
-          var height = randomBetween(12, 18);
+          var width = randomBetween(WIDTH_RANGE[0], WIDTH_RANGE[1]);
+          var height = randomBetween(HEIGHT_RANGE[0], HEIGHT_RANGE[1]);
           piece.style.width = width + 'px';
           piece.style.height = height + 'px';
           piece.style.left = randomBetween(0, 100) + '%';
           piece.style.setProperty('--x-shift', Math.round(randomBetween(-180, 180)) + 'px');
-          piece.style.setProperty('--duration', randomBetween(6, 9).toFixed(2) + 's');
-          var delay = randomBetween(0, 4);
+          var duration = randomBetween(6, 9);
+          piece.style.setProperty('--duration', duration.toFixed(2) + 's');
+          var delay = randomBetween(-duration, 4); // negative delay staggers loop so no gaps
           piece.style.animationDelay = delay.toFixed(2) + 's';
           piece.style.backgroundColor = COLORS[Math.floor(Math.random() * COLORS.length)];
 
